# lzw

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  rustfmt.toml
benches/: compare_lzw.rs  lzw_bench.rs
examples/: usage.rs
exploration/: Cargo.toml
exploration/benches/: compare_crates.rs  compare_evolutions.rs
exploration/examples/: usage.rs
exploration/src/: decoding.rs
lzw/: Cargo.toml  README.md
lzw-exploration/: Cargo.toml
lzw-exploration/benches/: compare_crates.rs  compare_evolutions.rs
lzw-exploration/examples/: usage.rs
lzw-exploration/src/: lib.rs  tree.rs
lzw/benches/: compare_crates.rs  throughput.rs
lzw/examples/: compress_image_data.rs  usage.rs
lzw/src/: decoder.rs  encoder.rs  io.rs  lib.rs  reader.rs  writer.rs
memory-profiling/: Cargo.toml
memory-profiling/tests/: compress_text_lzw.rs  compress_text_salwzeg.rs  compress_text_salzweg.rs  compress_text_weezl.rs  decompress_text_salwzeg.rs  decompress_text_weezl.rs
scripts/: format.sh
src/: lib.rs  lzw.rs  map.rs  stack.rs  tree.rs
test-assets/: lorem_ipsum.txt
