[package]
name = "lzw-test"
version = "0.1.0"
edition = "2021"
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
my-lzw = { path = "lzw" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
lzw = "0.10"
weezl = "0.1"

[[bench]]
name = "lzw_bench"
harness = false

[[bench]]
name = "compare_lzw"
harness = false

[workspace]
members = ["lzw"]
