[package]
name = "lzw-exploration"
version = "0.1.0"
edition = "2021"
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fast-lzw = { path = "../lzw" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
lzw = "0.10"
weezl = "0.1"

[[bench]]
name = "compare_crates"
harness = false

[[bench]]
name = "compare_evolutions"
harness = false
