[package]
name = "salzweg"
version = "0.1.0"
authors = ["Redwarp <redwarp@gmail.com>"]
edition = "2021"
description = "A LZW encoder and decoder, GIF flavored."
readme = "README.md"
license = "MIT"
repository = "https://github.com/redwarp/lzw"
keywords = ["lzw", "gif"]
categories = ["compression"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
lzw = "0.10"
weezl = "0.1"
rand = "0.8"
png = "0.17"
anyhow = "1.0"

[[bench]]
name = "compare_crates"
harness = false
